# airflow-sync

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
src/airflow_sync/: __init__.py  csv_sync_s3.py  note_sync.py  s3_postgres_sync.py  salesforce_sync.py  salesforce_sync_attachments.py  sync.py  utils.py
tasks/: __init__.py
