[build-system]
requires = ["setuptools>=41.0.1", "wheel>=0.33.4"]
build_backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 90
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pyre_configuration
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''
