[metadata]
name = airflow-sync
package_name = airflow_sync
version = attr: airflow_sync.__version__
description = Apache Airflow Dags.
url = https://github.com/snapmetrix/airflow-sync
author = SnapMetrix
long_description = file: README.rst
license = MIT License
keywords =
    apache
    airflow
    postgres
    salesforce
    s3
platforms = any
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Operating System :: POSIX
    Natural Language :: English
    Environment :: Plugins

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-xdist
    pytest-timeout
    twine
    readme-renderer[md]
    hypothesis
dev =
    apache-airflow[crypto,celery,postgres,jdbc,mssql,redis,ssh,s3,password]<=1.10.3
    black
    flake8
    flake8-bugbear
    invoke
    isort
    mypy
    parver
    pre-commit
    rope
docs =
    parver
    sphinx
    sphinx-autodoc-types
    sphinx-rtd-theme

[options]
zip_safe = true
python_requires = >=3.6
setup_requires = setuptools>=40.8
install_requires =
    attrs
    airflow-postgres-plugin
    airflow-salesforce-plugin
    s3fs<=0.1.13

[bdist_wheel]
universal = 1

[tool:pytest]
plugins = cov flake8 xdist
addopts = -rxsX --flake8 -n 4 --cov
norecursedirs = .git _build dist news tasks docs
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL

[flake8]
max-line-length = 90
select = C,E,F,W,B,B950
ignore = D203,F401,E123,E203,W503
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity = 13

[isort]
atomic = true
not_skip = __init__.py
line_length = 90
indent = '    '
multi_line_output = 3
known_third_party =airflow,airflow_postgres_plugin,airflow_salesforce_plugin,attr,dateutil,gevent,invoke,parver,setuptools,sqlalchemy
known_first_party = airflow_sync
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.7
